--- a/templates/index.html
+++ b/templates/index.html
@@ -3,38 +3,19 @@
 </head>
 <body>
 
-<div class='main-text'> There are <span id='num-stores'></span> Best Buys with Switches in stock! </div>
+<div class='main-text'> There are <span id='num-stores'></span> Best Buys with Switches in stock as of <span id='update-date'></span> </div>
+<div>Go get yours.</div>
 <br>
 <br>
 <br>
 <br>
+
+<div id='container'></div>
 <div id='full-list'></div>
 
-
-<script type="text/javascript">
-    
-    function update_view(store_data){
-        console.log('in update view');
-        document.getElementById("num-stores").textContent=store_data.length;
-        document.getElementById("full-list").textContent=JSON.stringify(store_data);
-
-    }
-
-    console.log('about to fetch');
-    
-    fetch('http://localhost:5000/stores')
-        .then(function(response){
-            console.log('getting the response');
-            return response.json();
-        }).then(function(store_data){
-            console.log('convered to json and updating view');
-            update_view(store_data)
-        });
-
-
-
-
-</script>
+<script src="https://unpkg.com/react@15/dist/react.js"></script>
+<script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/react_test.js') }}"></script>
 
 </body>
 </html>
