updates to work within the bestbuy blueprint

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
 <script src="https://unpkg.com/react@15/dist/react.js"></script>
 <script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='js/react_test.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('bestbuy_blueprint.static', filename='js/react_test.js') }}"></script>
 
 </body>
 </html>
