--- a/templates/index.html
+++ b/templates/index.html
@@ -13,12 +13,17 @@ span#num-stores {
     font-size: 3em;
 }
 
+.search-bar {
+    position: relative;
+    right:0px;
+}
+
 </style>
 
 </head>
 <body>
 <div class='text-container'>
-<div class='main-text'> There are <span id='num-stores'></span> Best Buys with Switches in stock as of <span id='update-date'></span><br><br>Go get yours</div>
+    <div class='main-text'> There are <span id='num-stores'></span> Best Buys with Switches in stock as of <span id='update-date'></span><br><br>Go get yrs</div>
 </div>
 
 <div id='container'></div>
@@ -32,12 +37,24 @@ span#num-stores {
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+  crossorigin="anonymous">
+</script>
+<link 
+    rel="stylesheet" 
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" 
+    integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" 
+    crossorigin="anonymous">
+<script 
+    src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" 
+    integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" 
+    crossorigin="anonymous">
+</script>
 
 <!-- for time formatting -->
 <script type="text/javascript" src="{{ url_for('bestbuy_blueprint.static', filename='js/moment.js') }}"></script>
+
+<!-- Fetch polyfill for non Chrome/Firefox -->
+<script type="text/javascript" src="{{ url_for('bestbuy_blueprint.static', filename='js/fetch.js') }}"></script>
 
 <!-- Our code -->
 <script type="text/javascript" src="{{ url_for('bestbuy_blueprint.static', filename='js/react_test.js') }}"></script>
