--- a/templates/index.html
+++ b/templates/index.html
@@ -23,15 +23,25 @@ span#num-stores {
 </head>
 <body>
 <div class='text-container'>
-    <div class='main-text'> There are <span id='num-stores'></span> Best Buys with Switches in stock as of <span id='update-date'></span><br><br>Go get yrs</div>
+    <div class='main-text' id='top'> There are <span id='num-stores'></span> Best Buys with Switches in stock<a href='#' data-toggle="tooltip" data-placement="bottom" title="According to the Best Buy API as of 9AM. The inventory info only refreshes once a day, so call first!">*</a> as of <span id='update-date'></span><br><br>Go get yrs</div>
 </div>
 
 <div id='container'></div>
-<div id='full-list'></div>
+
+
+
 
 <!-- React -->
 <script src="https://unpkg.com/react@15/dist/react.js"></script>
 <script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
+
+<!-- Tether for the tooltips -->
+<link 
+    rel="stylesheet" 
+    href="{{ url_for('bestbuy_blueprint.static', filename='css/tether.min.css') }}"
+    >
+<script type="text/javascript" src="{{ url_for('bestbuy_blueprint.static', filename='js/tether.min.js') }}"></script>
+
 
 <!-- Bootstrap + jQuery -->
 <script
@@ -50,6 +60,7 @@ span#num-stores {
     crossorigin="anonymous">
 </script>
 
+
 <!-- for time formatting -->
 <script type="text/javascript" src="{{ url_for('bestbuy_blueprint.static', filename='js/moment.js') }}"></script>
 
@@ -58,6 +69,15 @@ span#num-stores {
 
 <!-- Our code -->
 <script type="text/javascript" src="{{ url_for('bestbuy_blueprint.static', filename='js/react_test.js') }}"></script>
+
+<script type="text/javascript">
+    
+    // required to make the tooltip work
+    $(function () {
+      $('[data-toggle="tooltip"]').tooltip()
+    })
+
+</script>
 
 </body>
 </html>
