--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-
+<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
 <style media="screen" type="text/css">
 
 .main-text {
