rearrange columns, move filter form

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,11 +12,10 @@
 
 span#num-stores {
     font-size: 3em;
-}
+} 
 
-.search-bar {
-    position: relative;
-    right:0px;
+form.search-bar {
+    float: right;
 }
 
 </style>
