clean up the FAQ

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -37,7 +37,7 @@ The site is being served on a Linode VPS running Ubuntu 16.04. The site backend 
 
 <h1>Who are you?</h1>
 
-I'm Pete Cartwright, a developer in Richmond, VA. Check me out on <a href="http://twitter.com/petecartwright">Twitter</a>, <a href="https://www,.github.com/petecartwright">GitHub</a>, and at <a href="mailto:pete@petecartwright.com">pete@petecartwright.com</a>.<br><br>
+I'm Pete Cartwright, a developer in <a href="https://www.google.com/maps/place/Richmond,+VA/@37.5199492,-77.5253708,12z/data=!4m5!3m4!1s0x89b111095799c9ed:0xbfd83e6de2423cc5!8m2!3d37.5407246!4d-77.4360481">Richmond, VA</a>. Check me out on <a href="http://twitter.com/petecartwright">Twitter</a>, <a href="https://www.github.com/petecartwright">GitHub</a>, and at <a href="mailto:pete@petecartwright.com">pete@petecartwright.com</a>.<br><br>
 
 Other projects include <a href="http://www.whatshouldibuypetetoday.com">whatshouldibuypetetoday.com</a> and <a href="http://joebiden.sexy">joebiden.sexy</a> (warning: autoplaying music!).
 
