--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,7 @@ form.search-bar {
 </head>
 <body>
 
+<div><a href="faq">FAQ</a></div>
 
 <div class='text-container'>
     <div class='main-text' id='top'> There are <span id='num-stores'></span> Best Buys with Switches in stock<a href='#' data-toggle="tooltip" data-placement="bottom" title="According to the Best Buy API as of 9AM. The inventory info only refreshes once a day, so maybe call first?">*</a> as of <span id='update-date'></span><br><br>Go get yrs</div>
