--- a/templates/faq.html
+++ b/templates/faq.html
@@ -23,6 +23,10 @@ I wanted to buy a Switch but really really hate Craigslist and eBay. Best Buy is
 
 shrug emoji. I called a couple stores and confirmed they had stock, but I would not be stunned if it wasn't right 100% of the time. Also, this only tells you if a Switch was in-stock as of that morning, so if someone buys them all up t 10:01 AM, I have no way of knowing. Give them a call before you head over.<br><br>
 
+<h1>How many Switches do they have in stock?</h1>
+
+No idea. Best Buy doesn't share quantities via the API - only if a given item is or isn't in stock.<br><br>
+    
 <h1>Why don't you check more often?</h1>
 
 Best Buy only updates their data once a day. Sorry.<br><br>
