Make table Filterable and Sortable

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@ form.search-bar {
 <script type="text/javascript" src="{{ url_for('switch_checker_blueprint.static', filename='js/fetch.js') }}"></script>
 
 <!-- Our code -->
-<script type="text/javascript" src="{{ url_for('switch_checker_blueprint.static', filename='js/react_test.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('switch_checker_blueprint.static', filename='js/ReactFilterableSortableTable.js') }}"></script>
 
 <script type="text/javascript">
     
