fix replace typo - remove extra .

--- a/templates/index.html
+++ b/templates/index.html
@@ -115,8 +115,8 @@ form.search-bar {
                                          .replace('Nintendo - Switch Console Neon Joycons - ','')
                                          .replace('Joy-Con™', '')
                                          .replace('Neon Red', 'Red')
-                                         .replace('Neon Blue', 'Blue').
-                                         .;
+                                         .replace('Neon Blue', 'Blue')
+                                         ;
 
         var google_map_raw_url = `https://www.google.com/maps/place/${store.address},+${store.city},+${store.search_zip}`;
         var google_map_encoded_url = encodeURI(google_map_raw_url);
