Move to create-react-app base

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,190 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Switch Tracker</title> 
-<link rel="shortcut icon" href="{{ url_for('switch_checker_blueprint.static', filename='img/favicon.ico') }}">
-<style media="screen" type="text/css">
-
-.main-text {
-    text-align: center;
-    padding-top: 40px;
-    padding-bottom: 100px;
-}
-
-span#num-stores {
-    font-size: 3em;
-} 
-
-form.search-bar {
-    float: right;
-}
-
-.dev-logo {
-    text-align: center;
-    
-}
-
-#container {
-    padding-right: 5%;
-    padding-left: 5%;
-}
-
-.faq {
-    float: right;
-    padding-right: 10%;
-    padding-top: 1%;
-    font-size: 1.5em;
-}
-
-</style>
-
-</head>
-<body>
-
-<div class='faq'><a href="faq">FAQ</a></div>
-<br>
-<br>
-<div class='text-container'>
-    <div class='main-text' id='top'> There are <span id='num-stores'></span> Best Buys with Switches in stock<a href='#' data-toggle="tooltip" data-placement="bottom" title="According to the Best Buy API as of 9AM. The inventory info only refreshes once a day, so maybe call first?">*</a> as of <span id='update-date'></span><br><br>Go get yrs</div>
-</div>
-
-<div id='container'></div>
-
-
-<div class="dev-logo"><small>Powered by the Best Buy Developer API</small><a href="https://developer.bestbuy.com"><img src="https://developer.bestbuy.com/images/bestbuy-logo.png" alt="Best Buy Developer API"/></a></div>
-
-
-<!-- React -->
-<script src="https://unpkg.com/react@15/dist/react.js"></script>
-<script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
-
-<!-- Tether for the tooltips -->
-<link 
-    rel="stylesheet" 
-    href="{{ url_for('switch_checker_blueprint.static', filename='css/tether.min.css') }}"
-    >
-<script type="text/javascript" src="{{ url_for('switch_checker_blueprint.static', filename='js/tether.min.js') }}"></script>
-
-
-<!-- Bootstrap + jQuery -->
-<script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous">
-</script>
-<link 
-    rel="stylesheet" 
-    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" 
-    integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" 
-    crossorigin="anonymous">
-<script 
-    src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" 
-    integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" 
-    crossorigin="anonymous">
-</script>
-
-
-<!-- for time formatting -->
-<script type="text/javascript" src="{{ url_for('switch_checker_blueprint.static', filename='js/moment.js') }}"></script>
-
-<!-- Fetch polyfill for non Chrome/Firefox -->
-<script type="text/javascript" src="{{ url_for('switch_checker_blueprint.static', filename='js/fetch.js') }}"></script>
-
-<!-- Our code -->
-<script type="text/javascript" src="{{ url_for('switch_checker_blueprint.static', filename='js/ReactFilterableSortableTable.js') }}"></script>
-
-<script type="text/javascript">
-    
-    // required to make the tooltip work
-    $(function () {
-      $('[data-toggle="tooltip"]').tooltip()
-    })
-
-    // load and process the data from the API and pass to the React component
-
-    function cleanUpStoreData(stores){
-      // update the model name
-      // generate a google maps link + a href
-      // generate a phone href
-      // put the columns in the right order with the right names
-      var cleaned_stores = [];
-
-      stores.forEach((store, index) => {
-
-        var model_name = store.model_name.replace('Nintendo - Switch™ 32GB Console - ', '')
-                                         .replace('Joy-Con™', '')
-                                         .replace('Neon Red', 'Red')
-                                         .replace('Neon Blue', 'Blue');
-
-        var google_map_raw_url = `https://www.google.com/maps/place/${store.address},+${store.city},+${store.search_zip}`;
-        var google_map_encoded_url = encodeURI(google_map_raw_url);
-
-        cleaned_stores.push({'Model': model_name,
-                             'Address': `<a href=${google_map_encoded_url}>${store.address}</a>`,
-                             'Phone': `<a href='tel:${store.phone_number}'>${store.phone_number}</a>`,
-                             'City': store.city,
-                             'Zip': store.search_zip,
-                             'State': store.region,
-                             'key': index.toString()
-                             });
-      });
-      return cleaned_stores;
-    }
-
-
-
-    function update_intro_line(stores) {
-      // TODO - no reason this isn't a React Component
-
-      // update the text on the main page that 
-      // tells us how many stores have switches and the date
-
-      // stores can have multiple models - we want the distinct number of stores
-      var unique_stores = new Set();
-
-      for (store of stores){
-        // I know that I'm iterating over the entire list twice (here and in generateKeys)
-        // I'll fix it later when I'm smarter
-        unique_stores.add(store['store_name']);
-      }
-
-      var num_stores = unique_stores.size;
-      var date_checked = stores[0]['date_checked'];
-      var date_formatted = moment(date_checked).format('dddd MMMM Do, YYYY')
-      
-      document.getElementById('num-stores').innerHTML = num_stores;
-      document.getElementById('update-date').innerHTML = date_formatted;
-
-    }
-
-
-    fetch('/switch_checker/stores').then(function (response) {
-          return response.json();
-        }).then(function (stores) {
-          update_intro_line(stores);
-          var cleaned_stores = cleanUpStoreData(stores)
-          ReactDOM.render(React.createElement(FilterableSortableTable, { table_data: cleaned_stores }), document.getElementById('container'));
-        });
-
-
-
-</script>
-
-<!-- Google Analytics  -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-9158564-2', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
-</body>
-</html>
-
-
-
-
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/manifest.json"><link rel="shortcut icon" href="/favicon.ico"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css"><title>Switch Checker</title><link href="/static/css/main.46f8ad93.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e,t,a,n,c,o,s){e.GoogleAnalyticsObject=c,e[c]=e[c]||function(){(e[c].q=e[c].q||[]).push(arguments)},e[c].l=1*new Date,o=t.createElement(a),s=t.getElementsByTagName(a)[0],o.async=1,o.src="https://www.google-analytics.com/analytics.js",s.parentNode.insertBefore(o,s)}(window,document,"script",0,"ga"),ga("create","UA-9158564-2","auto"),ga("send","pageview")</script><script type="text/javascript" src="/static/js/main.3c793355.js"></script></body></html>
